# tgcall.rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.json.example  run.bat  run.sh  tgcall.service.example
.cargo/: config.toml
.github/workflows/: build.yaml  release.yaml
src/: lib.rs  main.rs
src/handlers/: call_handler.rs  mod.rs  tgcode_handler.rs
src/middlewares/: error_middleware.rs  mod.rs
src/models/: appstate.rs  config.rs  mod.rs
src/models/rest/: call_request.rs  mod.rs  tgcode_request.rs
src/telegram/: events.rs
tdlibs/linux/x86_64/tdlib/include/td/telegram/: td_api.h
tdlibs/linux/x86_64/tdlib/lib/cmake/Td/: TdConfigVersion.cmake  TdStaticTargets-release.cmake  TdStaticTargets.cmake  TdTargets-release.cmake
tdlibs/linux/x86_64/tdlib/lib/pkgconfig/: tdactor.pc  tdapi.pc  tdclient.pc  tdcore.pc  tddb.pc  tdjson.pc  tdjson_private.pc  tdjson_static.pc  tdnet.pc  tdsqlite.pc  tdutils.pc
tdlibs/macos/arm64/tdlib/include/td/telegram/: td_api.h
tdlibs/macos/arm64/tdlib/lib/pkgconfig/: tdactor.pc  tdapi.pc  tdclient.pc  tdcore.pc  tddb.pc  tdjson.pc  tdjson_private.pc  tdjson_static.pc  tdnet.pc  tdsqlite.pc  tdutils.pc
tdlibs/windows/x86_64/tdlib/lib/: tdactor.lib  tdapi.lib  tdclient.lib  tdcore.lib  tddb.lib  tdjson.lib  tdjson_private.lib  tdjson_static.lib  tdnet.lib  tdsqlite.lib  tdutils.lib
tdlibs/windows/x86_64/tdlib/lib/pkgconfig/: tdactor.pc  tdapi.pc  tdclient.pc  tdcore.pc  tddb.pc  tdjson.pc  tdjson_private.pc  tdjson_static.pc  tdnet.pc  tdsqlite.pc  tdutils.pc
(+7 files in other folders)
