[package]
name = "tgcall"
version = "0.3.0"
edition = "2021"

[dependencies]
log = { version = "0.4.21", features = ["std"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
tdlib-rs = { version = "1.0.5", features = [ "local-tdlib" ] }
ntex = { version = "2.0", features = ["tokio"] }
env_logger = "0.11.5"
